--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -4,8 +4,14 @@
 body {
   font-family: "Mukta", sans-serif;
   font-size: 1.4em;
-  max-height: 100vh;
+  min-height: 100vh;
   max-width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background: #111;
+  color: #eee;
 }
 
 .table {
@@ -27,4 +33,17 @@ body {
 }
 .filter-black {
   filter: $black-filter;
+}
+
+#dealerScore,
+#playerScore {
+  text-align: center;
+}
+
+.card-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-bottom: 0.7em;
 }
